--- a/HaCreator/Properties/Resources.ko.resx
+++ b/HaCreator/Properties/Resources.ko.resx
@@ -117,7 +117,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="EnterValidInput" xml:space="preserve">
+    <value>Please enter valid input</value>
+  </data>
   <data name="Initialization_Error_MSDirectoryNotExist" xml:space="preserve">
     <value>The MapleStory directory {0} provided does not exist.</value>
+  </data>
+  <data name="Warning" xml:space="preserve">
+    <value>Warning</value>
   </data>
 </root>
