--- a/HaCreator/Properties/Resources.resx
+++ b/HaCreator/Properties/Resources.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="EnterValidInput" xml:space="preserve">
+    <value>Please enter valid input</value>
+  </data>
   <data name="Initialization_Error_MSDirectoryNotExist" xml:space="preserve">
     <value>The MapleStory directory {0} provided does not exist.</value>
   </data>
@@ -126,5 +129,8 @@
   </data>
   <data name="placeholder" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\placeholder.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Warning" xml:space="preserve">
+    <value>Warning</value>
   </data>
 </root>
