--- a/HaRepacker/Properties/Resources.ko.resx
+++ b/HaRepacker/Properties/Resources.ko.resx
@@ -399,4 +399,13 @@
   <data name="MainWzExportJson_IncludeBase64_Title" xml:space="preserve">
     <value>Data</value>
   </data>
+  <data name="MainContextMenu_Batch" xml:space="preserve">
+    <value>Batch</value>
+  </data>
+  <data name="MainContextMenu_Batch_AIUpscaleImage" xml:space="preserve">
+    <value>Upscale image by 2x with AI</value>
+  </data>
+  <data name="MainContextMenu_Batch_EditInlink" xml:space="preserve">
+    <value>Fix '_inlink', '_outlink' nodes for old MapleStory</value>
+  </data>
 </root>
