--- a/HaRepacker/Properties/Resources.ja.resx
+++ b/HaRepacker/Properties/Resources.ja.resx
@@ -411,4 +411,7 @@
   <data name="MainContextMenu_Batch_EditInlink" xml:space="preserve">
     <value>Fix '_inlink', '_outlink' nodes for old MapleStory</value>
   </data>
+  <data name="MainContextMenu_Batch_AIUpscaleImage_QualityOnly" xml:space="preserve">
+    <value>Quality-only</value>
+  </data>
 </root>
