--- a/HaRepacker/Properties/Resources.resx
+++ b/HaRepacker/Properties/Resources.resx
@@ -527,4 +527,7 @@ Click "Yes" to download the new version.</value>
   <data name="batch_edit" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\batch_edit_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="MainContextMenu_Batch_AIUpscaleImage_QualityOnly" xml:space="preserve">
+    <value>Quality-only</value>
+  </data>
 </root>
